second part fixing errors