@@ -14,6 +14,7 @@ import static hellfirepvp.astralsorcery.common.lib.Constellations.*;
 
 import java.awt.*;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Random;
 
 import net.minecraft.enchantment.Enchantment;
@@ -96,32 +97,32 @@ public class RegistryConstellations {
             Arrays.asList(
                 new EnchantmentMapEffect(Enchantment.sharpness, 3, 7),
                 new EnchantmentMapEffect(Enchantment.power, 3, 7)),
-            Arrays.asList(new PotionMapEffect(Potion.damageBoost, 0, 3)));
+            List.of(new PotionMapEffect(Potion.damageBoost, 0, 3)));
         registerMapEffect(
             armara,
-            Arrays.asList(new EnchantmentMapEffect(Enchantment.protection, 3, 5)),
-            Arrays.asList(new PotionMapEffect(Potion.resistance)));
+            List.of(new EnchantmentMapEffect(Enchantment.protection, 3, 5)),
+            List.of(new PotionMapEffect(Potion.resistance)));
         registerMapEffect(
             vicio,
-            Arrays.asList(new EnchantmentMapEffect(Enchantment.featherFalling, 3, 5)),
-            Arrays.asList(new PotionMapEffect(Potion.moveSpeed, 1, 3)));
+            List.of(new EnchantmentMapEffect(Enchantment.featherFalling, 3, 5)),
+            List.of(new PotionMapEffect(Potion.moveSpeed, 1, 3)));
         registerMapEffect(
             aevitas,
-            Arrays.asList(new EnchantmentMapEffect(Enchantment.unbreaking, 1, 3)),
-            Arrays.asList(new PotionMapEffect(Potion.regeneration, 0, 3)));
+            List.of(new EnchantmentMapEffect(Enchantment.unbreaking, 1, 3)),
+            List.of(new PotionMapEffect(Potion.regeneration, 0, 3)));
         registerMapEffect(
             evorsio,
-            Arrays.asList(new EnchantmentMapEffect(Enchantment.efficiency, 3, 5)),
-            Arrays.asList(new PotionMapEffect(Potion.digSpeed, 1, 3)));
+            List.of(new EnchantmentMapEffect(Enchantment.efficiency, 3, 5)),
+            List.of(new PotionMapEffect(Potion.digSpeed, 1, 3)));
 
         registerMapEffect(
             lucerna,
-            Arrays.asList(new EnchantmentMapEffect(EnchantmentsAS.enchantmentNightVision, 1, 1)),
-            Arrays.asList(new PotionMapEffect(Potion.nightVision)));
+            List.of(new EnchantmentMapEffect(EnchantmentsAS.enchantmentNightVision, 1, 1)),
+            List.of(new PotionMapEffect(Potion.nightVision)));
         registerMapEffect(
             mineralis,
-            Arrays.asList(new EnchantmentMapEffect(Enchantment.fortune, 1, 3)),
-            Arrays.asList(new PotionMapEffect(Potion.digSpeed, 0, 3)));
+            List.of(new EnchantmentMapEffect(Enchantment.fortune, 1, 3)),
+            List.of(new PotionMapEffect(Potion.digSpeed, 0, 3)));
         registerMapEffect(
             horologium,
             Arrays.asList(
@@ -130,19 +131,19 @@ public class RegistryConstellations {
             Arrays.asList(new PotionMapEffect(Potion.digSpeed, 5, 8), new PotionMapEffect(Potion.moveSpeed, 1, 4)));
         registerMapEffect(
             octans,
-            Arrays.asList(new EnchantmentMapEffect(Enchantment.respiration, 2, 4)),
-            Arrays.asList(new PotionMapEffect(Potion.waterBreathing, 2, 4)));
+            List.of(new EnchantmentMapEffect(Enchantment.respiration, 2, 4)),
+            List.of(new PotionMapEffect(Potion.waterBreathing, 2, 4)));
         registerMapEffect(
             bootes,
-            Arrays.asList(new EnchantmentMapEffect(Enchantment.silkTouch, 1, 1)),
-            Arrays.asList(new PotionMapEffect(Potion.field_76443_y, 2, 5)));
+            List.of(new EnchantmentMapEffect(Enchantment.silkTouch, 1, 1)),
+            List.of(new PotionMapEffect(Potion.field_76443_y, 2, 5)));
         registerMapEffect(
             fornax,
             Arrays.asList(
                 new EnchantmentMapEffect(Enchantment.fireAspect, 1, 3),
                 new EnchantmentMapEffect(Enchantment.flame, 1, 2),
                 new EnchantmentMapEffect(EnchantmentsAS.enchantmentScorchingHeat, 1, 1)),
-            Arrays.asList(new PotionMapEffect(Potion.fireResistance, 0, 0)));
+            List.of(new PotionMapEffect(Potion.fireResistance, 0, 0)));
         registerMapEffect(
             pelotrio,
             Arrays.asList(
@@ -435,10 +436,10 @@ public class RegistryConstellations {
                 if (world.isRemote) {
                     Optional<Long> testSeed = ConstellationSkyHandler.getInstance()
                         .getSeedIfPresent(world);
-                    if (testSeed.isPresent()) {
+                    if (!testSeed.isPresent()) {
                         return false;
                     }
-                    rSeed = testSeed;
+                    rSeed = testSeed.get();
                 } else {
                     rSeed = new Random(world.getSeed()).nextLong();
                 }
